# py-to-win-app

./: .pre-commit-config.yaml  README.md  _config.yml  build.py  example-fastapi-desktop.py  example-flask-desktop.py  example-simple-console-app.py  index.md  make_docs.bat  make_docs.py  py_to_win_app.md.html  pyproject.toml  todo.txt
docs/: _config.yml  index.html  py_to_win_app.Project.md  py_to_win_app.md
docs/templates/: bootstrap.html
examples/fastapi-desktop/: main.py
examples/flask-desktop/: main.py
examples/pb-ccy-rates/: pb-ccy-rates.py  pyproject.toml
py_to_win_app/: __init__.py  exceptions.py  py_to_win_app.py
tests/: test_examples.py
