[tool.poetry]
name = "py-to-win-app"
version = "0.1.0"
description = "Make runnable apps from your python scripts!"
authors = ["Ruslan Iskov <ruslan.rv.ua@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ruslan-rv-ua/py-to-win-app"
repository = "https://github.com/ruslan-rv-ua/py-to-win-app"
documentation = "http://ruslan.rv.ua/py-to-win-app/"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
gen-exe = "^0.2.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
black = {version = "^21.9b0", allow-prereleases = true}
flake8 = "^4.0.1"
lazydocs = "^0.4.8"
markdown2 = "^2.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
